--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </div>
 
 <p>
-  Ready to team up? Let's collaborate, @octocat1!
+  Ready to team up? Let's collaborate, @MAdhavi !
 </p>
   
 </body>
